Fix list width on mobile

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -72,7 +72,7 @@
   }
   
   .projectsList {
-    width: 80vw;
+    width: 90vw;
     height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
